--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">WW Relocator.com</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -133,14 +133,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Relocation Services</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">We make your move smooth and almost seamless.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -199,44 +199,55 @@
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+        <div class="span5 offset1 asset">  
+              <img class="img-polaroid" src="http://s5.postimg.org/72fcx9xeb/hawai.jpeg"  width="480" height="300"> 
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+            WW Relocator.com intends to work with professional and licensed
+            moving companies in order to eliminate any stress consumers may
+            feel about the relocation process.
+
+            Our user-friendly interface will be easy to navigate and very 
+            quick to understand. First users fill out a simple form , where
+            there are asked a number of questions about themselves and the 
+            reason for their desire to move ---whether it is to seek employment
+            else where or retire in some nice exotic tropical location.
+
+            From that information WW Relocator.com match consumers with the
+            best location and an estimated relocation cost. Users will be 
+            able to search for additional services they may need before, during
+            or after the moving process. We intend making this site a one-stop
+            moving resource. 
+            
+         </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+             WW Relocator.com is a new start-up company aiming to become the 
+            premier online resource for consumers looking to move to a new
+            home or apartment, whether it's across town, across the country
+            or halfway across the world. More than 60 million persons move
+            every year, and WW Relocator.com intends to make that process
+            easier for everyone.
+
+            This new start-up is tackling the Relocation market. 
+            WW Relocator .com aims to help relocators answer one important
+            question: Where do we relocate to?
+
+            With jobs difficult to find in most countries, there are still
+            some countries that are doing fairly ok and some jobs are
+            available. WW Relocator.com aim to provide you with 
+            information given your personal circumstances, your desired
+            goals and recommend a rank-ordered list of the optimal places
+            in the world to relocate to and give an estimated cost of relocation.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://s5.postimg.org/461ioh6c3/Singapore.jpg" width="480" height="300">
         </div>
       </div>
 
@@ -292,4 +303,8 @@
     </div>
   </body>
 </html>
+
+
+
+
 
