--- a/index.html
+++ b/index.html
@@ -204,7 +204,14 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" 
+             data-button-style="custom_large" 
+             data-button-text="Preorder with Bitcoin"
+             data-code="ff2ad1908f25e52254b26ea0fed1e923" 
+             href="https://coinbase.com/checkouts/ff2ad1908f25e52254b26ea0fed1e923">
+             Preorder With Bitcoin</a>
+             <script src="https://coinbase.com/assets/button.js" 
+             type="text/javascript"></script>       
           </div>
           </div>
           <div class="row-fluid">
